--- a/sample/iOS/NearForms.iOS.csproj
+++ b/sample/iOS/NearForms.iOS.csproj
@@ -100,7 +100,7 @@
       <HintPath>..\packages\Xamarin.Forms.2.4.0.38779\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="NearBridge">
-      <HintPath>..\..\NearBridge.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\NearBridge.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
