--- a/bridge/Droid/XamarinBridge.Droid/XamarinBridge.Droid.csproj
+++ b/bridge/Droid/XamarinBridge.Droid/XamarinBridge.Droid.csproj
@@ -152,13 +152,13 @@
       <HintPath>..\..\packages\Xamarin.GooglePlayServices.Location.60.1142.0-beta2\lib\MonoAndroid80\Xamarin.GooglePlayServices.Location.dll</HintPath>
     </Reference>
     <Reference Include="AltBeacon.Droid">
-      <HintPath>..\..\packages\Xamarin.NearIT.Android.2.2.8\lib\AltBeacon.Droid.dll</HintPath>
+      <HintPath>..\..\packages\Andrea.Near.8.11.0\lib\AltBeacon.Droid.dll</HintPath>
     </Reference>
     <Reference Include="BindDroid">
-      <HintPath>..\..\packages\Xamarin.NearIT.Android.2.2.8\lib\BindDroid.dll</HintPath>
+      <HintPath>..\..\packages\Andrea.Near.8.11.0\lib\BindDroid.dll</HintPath>
     </Reference>
     <Reference Include="GoogleServices">
-      <HintPath>..\..\packages\Xamarin.NearIT.Android.2.2.8\lib\GoogleServices.dll</HintPath>
+      <HintPath>..\..\packages\Andrea.Near.8.11.0\lib\GoogleServices.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
