--- a/bridge/Droid/XamarinBridge.Droid/packages.config
+++ b/bridge/Droid/XamarinBridge.Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Andrea.Near" version="8.11.0" targetFramework="monoandroid80" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
@@ -80,5 +81,4 @@
   <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Location" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.NearIT.Android" version="2.2.8" targetFramework="monoandroid80" />
 </packages>
