--- a/bridge/Droid/XamarinBridge.Droid/packages.config
+++ b/bridge/Droid/XamarinBridge.Droid/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Andrea.Near" version="8.11.0" targetFramework="monoandroid80" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid80" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
@@ -39,20 +39,20 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid80" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid80" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="Xam.Plugin.Connectivity" version="4.0.0-beta139" targetFramework="monoandroid80" />
+  <package id="Xam.Plugin.Connectivity" version="4.0.0.171-beta" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
@@ -73,12 +73,12 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid80" />
-  <package id="Xamarin.Firebase.Common" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Firebase.Iid" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Firebase.Messaging" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Forms" version="2.5.0.19271-pre2" targetFramework="monoandroid80" />
-  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.GooglePlayServices.Location" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.0-beta2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Common" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Iid" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Firebase.Messaging" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Location" version="60.1142.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.0" targetFramework="monoandroid80" />
 </packages>
