--- a/bridge/XamarinBridge.PCL/packages.config
+++ b/bridge/XamarinBridge.PCL/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="2.5.0.19271-pre2" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.NearIT.iOS" version="2.2.7" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
