renamed bridge ios project

--- a/bridge/XamarinBridge.iOS/XamarinBridge.iOS.csproj
+++ b/bridge/XamarinBridge.iOS/XamarinBridge.iOS.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CFCA42F7-17CF-4B06-A479-4DF17C4B135F}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>NearBridge</RootNamespace>
-    <AssemblyName>NearBridge</AssemblyName>
+    <RootNamespace>XamarinBridge.iOS</RootNamespace>
+    <AssemblyName>XamarinBridge.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
