--- a/bridge/NearBridge/NearBridge.csproj
+++ b/bridge/NearBridge/NearBridge.csproj
@@ -45,9 +45,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="NeariOSBind">
-      <HintPath>..\..\..\..\Desktop\Xamarin\NearIT-Bind\iOS-Bind\NeariOSBind\bin\Debug\NeariOSBind.dll</HintPath>
-    </Reference>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\packages\Xamarin.Forms.2.5.0.122203\lib\Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
@@ -59,6 +56,15 @@
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.2.5.0.122203\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="NearBridge">
+      <HintPath>..\packages\Xamarin.NearIT.iOS.2.5.5\lib\NearITSDK\NearBridge.dll</HintPath>
+    </Reference>
+    <Reference Include="NeariOSBind">
+      <HintPath>..\packages\Xamarin.NearIT.iOS.2.5.5\lib\NearITSDK\NeariOSBind.dll</HintPath>
+    </Reference>
+    <Reference Include="XamarinBridge.PCL">
+      <HintPath>..\packages\Xamarin.NearIT.PCL.2.5.6\lib\XamarinBridge.PCL.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -76,12 +82,6 @@
     <Compile Include="Adapter\AdapterCoupon.cs" />
     <Compile Include="Adapter\AdapterCustom.cs" />
     <Compile Include="Adapter\AdapterSimple.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\XamarinBridge.PCL\XamarinBridge.PCL.csproj">
-      <Project>{A44F7082-2621-4EC9-94CC-CE6B22D303E8}</Project>
-      <Name>XamarinBridge.PCL</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
