--- a/sample/Droid/packages.config
+++ b/sample/Droid/packages.config
@@ -23,10 +23,10 @@
   <package id="Xamarin.Firebase.Common" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.Firebase.Iid" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.Firebase.Messaging" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Forms" version="2.5.0.75255-pre3" targetFramework="monoandroid80" />
+  <package id="Xamarin.Forms" version="2.5.1.444934" targetFramework="monoandroid81" />
   <package id="Xamarin.GooglePlayServices.Base" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Location" version="60.1142.0-beta2" targetFramework="monoandroid80" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.0-beta2" targetFramework="monoandroid80" />
-  <package id="Xamarin.NearIT.Android" version="2.4.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.NearIT.Android" version="2.5.8" targetFramework="monoandroid81" />
 </packages>
