--- a/sample/Sample.Android/Sample.Android.csproj
+++ b/sample/Sample.Android/Sample.Android.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
 <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+<AndroidSupportedAbis>armeabi-v7a;armeabi;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,6 +49,18 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
+    <Reference Include="XamarinBridge.Droid">
+      <HintPath>..\..\bridge\Droid\XamarinBridge.Droid\bin\Debug\XamarinBridge.Droid.dll</HintPath>
+    </Reference>
+    <Reference Include="NearIT.Android">
+      <HintPath>..\..\..\Xamarin-Binding\NearIT.Android\NearIT.Android\bin\Debug\NearIT.Android.dll</HintPath>
+    </Reference>
+    <Reference Include="AltBeaconBinding">
+      <HintPath>..\..\..\AltBeaconBinding\AltBeaconBinding\bin\Debug\AltBeaconBinding.dll</HintPath>
+    </Reference>
+    <Reference Include="GoogleServicesBinding">
+      <HintPath>..\..\..\GoogleServicesBinding\GoogleServicesBinding\bin\Debug\GoogleServicesBinding.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
@@ -58,6 +71,12 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.Compat">
       <Version>27.0.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Location">
+      <Version>60.1142.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Firebase.Messaging">
+      <Version>60.1142.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
