--- a/sample/Sample.iOS/Sample.iOS.csproj
+++ b/sample/Sample.iOS/Sample.iOS.csproj
@@ -146,9 +146,15 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="NearIT.iOS.2.10">
+      <HintPath>..\..\..\Xamarin-Binding\NearIT.iOS\NearIT.iOS\bin\Debug\NearIT.iOS.2.10.dll</HintPath>
+    </Reference>
+    <Reference Include="XamarinBridge.iOS">
+      <HintPath>..\..\bridge\XamarinBridge.iOS\bin\Debug\XamarinBridge.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sample\Sample.csproj">
