--- a/sample/Sample/Sample.csproj
+++ b/sample/Sample/Sample.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\bridge\XamarinBridge.PCL\XamarinBridge.PCL.csproj" />
+  </ItemGroup>
 </Project>
