--- a/sample/Sample/Sample.csproj
+++ b/sample/Sample/Sample.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\bridge\XamarinBridge.PCL\XamarinBridge.PCL.csproj" />
+    <Reference Include="XamarinBridge.PCL">
+      <HintPath>..\..\bridge\XamarinBridge.PCL\bin\Debug\XamarinBridge.PCL.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
