--- a/new.sample/Sample.iOS/Sample.iOS.csproj
+++ b/new.sample/Sample.iOS/Sample.iOS.csproj
@@ -148,24 +148,28 @@
     <Reference Include="NearIT.iOS.2.10">
       <HintPath>..\..\..\Xamarin-Binding\NearIT.iOS\NearIT.iOS\bin\Debug\NearIT.iOS.2.10.dll</HintPath>
     </Reference>
-    <Reference Include="XamarinBridge.iOS">
-      <HintPath>..\..\bridge\XamarinBridge.iOS\bin\Debug\XamarinBridge.iOS.dll</HintPath>
-    </Reference>
-    <Reference Include="XamarinBridge.PCL">
-      <HintPath>..\..\bridge\XamarinBridge.PCL\bin\Debug\XamarinBridge.PCL.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sample\Sample.csproj">
       <Project>{004107F0-28CB-40D2-8B10-0D7AC1B405E5}</Project>
       <Name>Sample</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\bridge\XamarinBridge.PCL\XamarinBridge.PCL.csproj">
+      <Project>{A44F7082-2621-4EC9-94CC-CE6B22D303E8}</Project>
+      <Name>XamarinBridge.PCL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\bridge\XamarinBridge.iOS\XamarinBridge.iOS.csproj">
+      <Project>{CFCA42F7-17CF-4B06-A479-4DF17C4B135F}</Project>
+      <Name>XamarinBridge.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Info.plist" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.3.0.912540</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
